fixes some spacing issues on mobile

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -223,6 +223,11 @@ section
     width: 100%
 
 .job-content
+
+    +mobile
+        section > .h2
+            margin: 2 * $p 0
+
     footer
         width: 54 * $p
 
